--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Check formatting
         run: cargo fmt --all -- --check
 
+      - name: Clippy lint
+        run: cargo clippy --all-targets
+
       - name: Build
         run: cargo build --verbose --all-targets
 
